<resources>
    <string name="app_name">AndroidTestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="characters">Characters</string>
    <string name="search_title">Search</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="no_favorites_yet">No favorites yet</string>
</resources>